--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -7,6 +7,9 @@
 @import './parts/sections/submission';
 @import './parts/sections/working';
 @import './parts/sections/faq';
+@import './parts/sections/our-service';
+@import './parts/sections/question';
+@import './parts/sections/our-advantages';
 
 * {
   box-sizing: border-box;
