--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -19,4 +19,5 @@
 @import './components/accordion';
 @import './components/service';
 @import './components/main-banner';
+@import './components/cart-advantage';
 
