--- a/dev/pages/include/components/accordion.html
+++ b/dev/pages/include/components/accordion.html
@@ -15,8 +15,8 @@
         </div>
         <div class="accordion__btn">
             <div class="accordion__btn__block square--64">
-                <span></span>
-                <span></span>
+                <span class="@btn-class"></span>
+                <span class="@btn-class"></span>
             </div>
         </div>
     </div>
