--- a/dev/assets/styles/parts/components/accordion.scss
+++ b/dev/assets/styles/parts/components/accordion.scss
@@ -53,7 +53,7 @@
       span:first-child {
         width: 30px;
         display: block;
-        background: white;
+        //background-color: inherit;
         height: 5px;
         position: absolute;
         top: 50%;
@@ -64,7 +64,7 @@
       span:nth-child(2) {
         width: 5px;
         display: block;
-        background: white;
+        //background-color: inherit;
         height: 30px;
         position: absolute;
         transform: translate(-50%, -50%);
