--- a/dev/assets/styles/parts/components/information-banner.scss
+++ b/dev/assets/styles/parts/components/information-banner.scss
@@ -1,3 +1,9 @@
+.section{
+  &--information-banner{
+
+  }
+}
+
 .information-banner {
   min-height: 480px;
   width: 100%;
@@ -20,3 +26,4 @@
     text-transform: uppercase;
   }
 }
+
