--- a/dev/assets/styles/parts/sections/faq.scss
+++ b/dev/assets/styles/parts/sections/faq.scss
@@ -35,7 +35,7 @@
   }
 
   &__name, &__title {
-    text-align: center;
+    //text-align: center;
     margin-top: 5px;
     //color: inherit;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
