finish about university page

--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -20,4 +20,7 @@
 @import './components/service';
 @import './components/main-banner';
 @import './components/cart-advantage';
+@import './components/university-details';
+@import './components/university-intro';
+@import './components/gallery';
 
