--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -10,6 +10,8 @@
 @import './parts/sections/our-service';
 @import './parts/sections/question';
 @import './parts/sections/our-advantages';
+@import './parts/sections/undergraduate';
+@import './parts/sections/university-information';
 
 * {
   box-sizing: border-box;
@@ -25,8 +27,13 @@ body {
   width: 100%;
 }
 
+p {
+  margin: 0;
+}
+
 ul {
   padding: 0;
+  margin: 0;
 }
 
 ol, li {
@@ -95,14 +102,14 @@ a {
 }
 
 
- //
- //.wrapper-page {
- //    display: flex;
- //    flex-direction: column;
- //    min-height: 100vh;
- //    color: $main-color;
- //    background-color: $color-1;
- //}
+//
+//.wrapper-page {
+//    display: flex;
+//    flex-direction: column;
+//    min-height: 100vh;
+//    color: $main-color;
+//    background-color: $color-1;
+//}
 
 @import './parts/pages';
 @import './parts/layouts';
