--- a/dev/assets/styles/parts/sections/our-advantages.scss
+++ b/dev/assets/styles/parts/sections/our-advantages.scss
@@ -38,7 +38,7 @@
 
   &__lists {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(390px, 1fr));
     row-gap: 40px;
     column-gap: 30px;
   }
