--- a/dev/assets/styles/_vars.scss
+++ b/dev/assets/styles/_vars.scss
@@ -38,10 +38,14 @@ $size-x: 16px;
 $size-xx: 18px;
 $size-3x: 20px;
 $size-4x: 24px;
+$size-4xxx: 30px;
 $size-5x: 32px;
 $size-5xx: 34px;
 $size-6x: 36px;
 $size-7x: 48px;
+$size-8x: 54px;
+//$size-8x: 54px;
+$size-9x: 96px;
 
 $weight-normal: 400;
 $weight-normal-bold: 500;
