--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -23,4 +23,7 @@
 @import './components/university-details';
 @import './components/university-intro';
 @import './components/gallery';
+@import './components/services';
+@import './components/list-documents';
+@import './components/country-shortly-info';
 
