--- a/dev/pages/include/layouts/head.html
+++ b/dev/pages/include/layouts/head.html
@@ -3,9 +3,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+<link rel="stylesheet" href="./assets/styles/loading-bar.min.css" />
 <link type="image/x-icon" href="./assets/static/favicon.ico" rel="shortcut icon">
 <link type="Image/x-icon" href="./assets/static/favicon.ico" rel="icon">
 <link rel="stylesheet" href="./assets/styles/main.min.css">
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <title>@title</title>
