finish page country

--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -26,4 +26,9 @@
 @import './components/services';
 @import './components/list-documents';
 @import './components/country-shortly-info';
+@import './components/general-information';
+@import './components/about-country';
+@import './components/about-study';
+@import './components/admission';
+@import './components/study-in-country';
 
