--- a/dev/assets/styles/_classes.scss
+++ b/dev/assets/styles/_classes.scss
@@ -83,9 +83,16 @@
     width: 116px;
     height: 116px;
   }
+
   &--266 {
     width: 266px;
     height: 266px;
+  }
+}
+
+.display {
+  &_flex {
+    display: flex;
   }
 }
 
@@ -120,6 +127,10 @@
 
   &_6x {
     font-size: $size-6x
+  }
+
+  &_6xxx {
+    font-size: $size-6xxx
   }
 
   &_7x {
@@ -168,6 +179,23 @@
 }
 
 .title {
+  &_logo {
+    display: flex;
+    padding: 4px 24px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    color: $white;
+    //font-family: IBM Plex Sans;
+    font-size: 84px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    background: $logo-color;
+  }
+
   &_normal {
     font-style: normal;
     font-weight: 400;
@@ -197,6 +225,7 @@
   &_light_normal {
     font-weight: 300;
   }
+
   &_normal {
     font-weight: 400;
   }
@@ -231,6 +260,10 @@
     line-height: $size-xx
   }
 
+  &_xxx {
+    line-height: $size-xxx
+  }
+
   &_3x {
     line-height: $size-3x
   }
@@ -238,6 +271,11 @@
   &_4x {
     line-height: $size-4x
   }
+
+  &_4xx {
+    line-height: $size-4xx
+  }
+
   &_4xxx {
     line-height: $size-4xxx
   }
@@ -252,6 +290,9 @@
 
   &_6x {
     line-height: $size-6x
+  }
+  &_6xxx {
+    line-height: $size-6xxx
   }
 
   &_7x {
@@ -286,11 +327,12 @@
   }
 }
 
-.block{
-  &--reverse{
+.block {
+  &--reverse {
     flex-direction: row-reverse;
   }
 }
+
 
 //$size-min: 14px;
 //$size-max: 64px;
