--- a/dev/assets/styles/_vars.scss
+++ b/dev/assets/styles/_vars.scss
@@ -11,6 +11,9 @@ $dark-blue: #2C3A5A;
 $dark-black: #0E172A;
 
 $logo-color: #F87B80;
+$fade-black: #000000;
+
+$gray: #787E82;
 
 // $color-1: #222222;
 
@@ -36,12 +39,15 @@ $size-max: 64px;
 
 $size-x: 16px;
 $size-xx: 18px;
+$size-xxx: 19.6px;
 $size-3x: 20px;
 $size-4x: 24px;
+$size-4xx: 27px;
 $size-4xxx: 30px;
 $size-5x: 32px;
 $size-5xx: 34px;
 $size-6x: 36px;
+$size-6xxx: 40px;
 $size-7x: 48px;
 $size-8x: 54px;
 //$size-8x: 54px;
