--- a/dev/assets/styles/parts/components/service.scss
+++ b/dev/assets/styles/parts/components/service.scss
@@ -16,7 +16,7 @@
 
   &__lists {
     display: grid;
-    grid-template-columns: repeat(3, minmax(245px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 30px;
   }
 
